--- a/src/burner/libretro/Makefile
+++ b/src/burner/libretro/Makefile
@@ -520,7 +520,7 @@ FBNEO_SOBJ := $(SOURCES_S:.S=.o)
 OBJS := $(FBNEO_COBJ) $(FBNEO_CXXOBJ) $(FBNEO_SOBJ)
 
 FBNEO_DEFINES += -D__LIBRETRO__ \
-	-DNO_VIZ -D_LARGEFILE64_SOURCE=0 -D_FILE_OFFSET_BITS=32 \
+	-DNO_VIZ \
 	$(ENDIANNESS_DEFINES) \
 	$(PLATFORM_DEFINES) \
 	$(NEON_FLAGS) \
