--- a/src/burner/libretro/Makefile.common
+++ b/src/burner/libretro/Makefile.common
@@ -470,7 +470,7 @@ ifeq (,$(findstring msvc,$(platform)))
 endif
 
 ifeq (,$(findstring msvc,$(platform)))
-	CXXFLAGS += -std=gnu++98
+	CXXFLAGS += -std=c++17
 endif
 
 #ifeq ($(USE_X64_DRC), 1)
