Add rpi4 build target.

--- a/src/burner/libretro/Makefile
+++ b/src/burner/libretro/Makefile
@@ -91,8 +91,14 @@ ifneq (,$(findstring unix,$(platform)))
 			HAVE_NEON = 1
 			USE_CYCLONE = 1
 		endif
-	else ifneq (,$(findstring rpi4_64,$(platform)))
-		PLATFORM_DEFINES := -march=armv8-a+crc+simd -mtune=cortex-a72
+    else ifneq (,$(findstring rpi4,$(platform)))
+        ifneq (,$(findstring rpi4_64,$(platform)))
+            PLATFORM_DEFINES := -march=armv8-a+crc+simd -mtune=cortex-a72
+        else
+            PLATFORM_DEFINES := -marm -mcpu=cortex-a72.cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard -DSKIP_STDIO_REDEFINES
+            HAVE_NEON = 1
+            USE_CYCLONE = 1
+        endif
 	endif
 
 	# Solaris
